# lyrics-thing-backend

./: README.md  main.py  pyproject.toml
app/api/: __init__.py
app/lib/: Env.py  notion.py
