[tool.poetry]
name = "python-sveltekit-starter-2024"
version = "0.1.0"
description = ""
authors = ["rainsound.ai <hello@rainsound.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
pre-commit = "^3.7.0"
notion-client = "^2.2.1"
openai = "^1.12.0"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
